# Learning_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
exercises/02_variables/: var_01  var_02  var_03  var_03.rs  var_04  var_04.rs  var_05  var_05.rs  var_06  var_06.rs
exercises/02_variables/src/: main.rs
exercises/03_functions/src/: main.rs
exercises/04_control_flow/src/: main.rs
exercises/04_if/: 01_if.rs  01_temp_convert.rs  02_nfib.rs  03_if.rs  03_twelve_days_christmas.rs
exercises/05_primitive_types/: 01_pt.rs  02_pt.rs  03_pt.rs
exercises/05_primitive_types_slices/: Cargo.toml
exercises/05_primitive_types_slices/src/: main.rs
exercises/07_structures/src/: main.rs
exercises/08_enums/src/: main.rs
exercises/09_cargo_organization/: Cargo.toml
exercises/09_cargo_organization/src/: garden.rs  lib.rs  main.rs
exercises/09_restaurant_xample/: Cargo.toml
exercises/09_restaurant_xample/src/: lib.rs
exercises/12_generics_traits_lifetimes/src/: lib.rs
exercises/13_into_tests/: Cargo.toml
exercises/13_into_tests/src/: lib.rs
exercises/13_into_tests/tests/: integration_test.rs
exercises/14_minigrep/src/: lib.rs  main.rs
exercises/15_functional_features/: Cargo.toml
exercises/16_more_cargo/: Cargo.toml
exercises/16_more_cargo/src/: art.rs  lib.rs  main.rs
exercises/20_object_oriented/: Cargo.toml
exercises/22_advanced_features/: Cargo.toml
exercises/23_hello_web_server/: Cargo.toml
exercises/23_hello_web_server/src/: main.rs
exercises/codewars/src/: katas.rs
exercises/guessing_game/: Cargo.toml
exercises/hello_macro_derive/src/: lib.rs
exercises/quizzes/: Cargo.toml
exercises/quizzes/src/: main.rs
learning_packages/control_flow/: Cargo.toml
learning_packages/functions/: Cargo.toml
learning_packages/guessing_game/src/: main.rs
learning_packages/variables/: Cargo.toml
notebooks/: Ch01.ipynb
(+22 files in other folders)
