[package]
name = "learning_rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "exercises/01_hello_world",
    "exercises/02_variables",
    "exercises/03_functions",
    "exercises/04_control_flow",
    "exercises/05_primitive_types_slices",
    "exercises/06_ownership",
    "exercises/07_structures", 
    "exercises/08_enums", 
    "exercises/09_cargo_organization", 
    "exercises/codewars",
    "exercises/guessing_game", 
    "exercises/quizzes", "exercises/09_restaurant_xample", 
]
[dependencies]
